[gd_scene load_steps=2 format=3 uid="uid://cw5o0cntlmhhv"]

[ext_resource type="Script" path="res://ui/race_ui.gd" id="1_lfcxe"]

[node name="RaceUI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_lfcxe")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = 20.0
offset_top = 20.0
offset_right = 220.0
offset_bottom = 300.0

[node name="PositionLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Position: 1/4"

[node name="LapLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Lap: 0/3"

[node name="Separator" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2

[node name="PlayerListHeader" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Race Positions:"

[node name="PlayerList" type="VBoxContainer" parent="VBoxContainer"]
layout_mode = 2